syntax = "proto3";option java_multiple_files = true;package vn.techres.microservice.grpc.java.customer_order_online.customer_order;service CustomerOrderService {  rpc findCustomerOrderById(CustomerOrderRequest) returns (BaseListGRPCResponse) {};  rpc updateCustomerOrderStatusEnumAndOrderId(OrderRequest) returns (BaseGRPCResponse) {};}message CustomerOrderRequest {  int32 customer_order_id = 1;}message OrderRequest {  int32 order_id = 1;  int32 customer_order_id = 2;}message BaseGRPCResponse {  int32 status = 1;  string message = 2;  CustomerOrderResponse data = 3;}message BaseListGRPCResponse {  int32 status = 1;  string message = 2;  CustomerOrderResponse customer_order = 3;  repeated CustomerOrderDetailResponse customer_order_detail = 4;}message CustomerOrderResponse {  int32 id = 1;  int32 restaurant_id = 2;  int32 restaurant_brand_id = 3;  int32 branch_id = 4;  int32 area_id = 5;  int32 table_id = 6;  int32 order_id = 7;  string total_amount = 8;  string note = 9;  int32 customer_order_status = 10;}message CustomerOrderDetailResponse {  int64  id = 1;  int32  customer_order_id = 2;  int32  food_id = 3;  string food_name = 4;  int32  order_detail_parent_id = 5;  int32  order_detail_combo_parent_id = 6;  string customer_order_detail_addition_ids = 7;  string customer_order_detail_combo_ids = 8;  string  quantity = 9;  string price = 10;  string total_price = 11;  int32  is_addition = 12;  int32  is_combo = 13;  string note = 14;}